fixed options overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .sidebar {
-  z-index: 101;
+  z-index: 501;
 }
 .nav-item,
 .navbar {
-  z-index: 100;
+  z-index: 500;
 }
 
 @media screen and (max-width: 1280px) {
